--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,4 +1,5 @@
 <link href="/css/layout.css" rel="stylesheet">
+<script src="js/form.js" type="text/javascript"></script>
 <body>
 	<div class="text_div">
 		<%=yield%>
