--- a/views/random_pairs_page1.erb
+++ b/views/random_pairs_page1.erb
@@ -1,13 +1,14 @@
 <div class="box_div">
 <head>
 	<link rel="stylesheet" type="text/css" href="/css/layout.css">
-
 </head>
 <body>
 <h1> Welcome! Please click the add button below to begin adding names. You may remove names with the delete button, if necessary. When you are ready to pair the names together, click the pair now button. </h1>
 <form method = "post" action = "random_pairs_page1">
 <hr>
 </form>
-<button class = "button" onclick = 'add_boxes()'>test</button>
+<button class = "button" onclick = 'addBoxes()'>Add Boxes</button>
+<button class = "button" onclick = 'deleteBoxes(boxes)'>Remove Boxes</button>
+<button class = "button" onclick = 'pairButton()'>Pair Now</button>
 </body>
 </div>
