Started on final page, results page

--- a/views/random_pairs_page1.erb
+++ b/views/random_pairs_page1.erb
@@ -8,7 +8,7 @@
 <hr>
 </form>
 <button class = "button" onclick = 'addBoxes()'>Add Boxes</button>
-<button class = "button" onclick = 'deleteBoxes(boxes)'>Remove Boxes</button>
+<button class = "button" onclick = 'deleteBoxes(boxes)'>Delete Boxes</button>
 <button class = "button" onclick = 'pairButton()'>Pair Now</button>
 </body>
 </div>
