--- a/views/random_pairs_page1.erb
+++ b/views/random_pairs_page1.erb
@@ -1,14 +1,17 @@
 <div class="box_div">
 <head>
 	<link rel="stylesheet" type="text/css" href="/css/layout.css">
+	<script src="/js/form.js"></script>
 </head>
 <body>
 <h1> Welcome! Please click the add button below to begin adding names. You may remove names with the delete button, if necessary. When you are ready to pair the names together, click the pair now button. </h1>
 <form method = "post" action = "random_pairs_page1">
+<div id="nameMe">
+    </div>
 <hr>
 </form>
 <button class = "button" onclick = 'addBoxes()'>Add Boxes</button>
-<button class = "button" onclick = 'deleteBoxes(boxes)'>Delete Boxes</button>
+<button class = "button" onclick = 'deleteBoxes()'>Delete Boxes</button>
 <button class = "button" onclick = 'pairButton()'>Pair Now</button>
 </body>
 </div>
