Trying to get final page to work correctly

--- a/views/random_pairs_final_page.erb
+++ b/views/random_pairs_final_page.erb
@@ -4,8 +4,8 @@
 </head>
 <body>
 <h1> Here are the names that you chose, which are now randomly paired. If you want to randomly pair more names, then feel free to click the back button below. </h1>
-<form method = "post" action = "random_pairs_final_page">
+<form method = "post" action = "restart">
 </form>
-<input class = "button" type = "submit" value = "Back">
+<input class = "button" type = "submit" value = "Back" onclick>
 </body>
 </div>
