--- a/views/random_pairs_page1.erb
+++ b/views/random_pairs_page1.erb
@@ -9,9 +9,9 @@
 <div id="nameMe">
     </div>
 <hr>
-</form>
 <button class = "button" onclick = 'addBoxes()'>Add Boxes</button>
 <button class = "button" onclick = 'deleteBoxes()'>Delete Boxes</button>
-<button class = "button" onclick = 'pairButton()'>Pair Now</button>
+<input class = "button" type = "submit" value = "Pair Now" onclick> </button>
+</form>
 </body>
 </div>
