Got results page (mostly) working

--- a/views/random_pairs_page1.erb
+++ b/views/random_pairs_page1.erb
@@ -9,9 +9,10 @@
 <div id="nameMe">
     </div>
 <hr>
+<input class = "button" type = "submit" value = "Pair Now" onclick>
+</form>
+<!-- <div class = "buttons"> -->
 <button class = "button" onclick = 'addBoxes()'>Add Boxes</button>
 <button class = "button" onclick = 'deleteBoxes()'>Delete Boxes</button>
-<input class = "button" type = "submit" value = "Pair Now" onclick> </button>
-</form>
 </body>
 </div>
