--- a/views/random_pairs_final_page.erb
+++ b/views/random_pairs_final_page.erb
@@ -3,9 +3,11 @@
 	<link rel="stylesheet" type="text/css" href="/css/layout.css">
 </head>
 <body>
-<h1> Here are the names that you chose, which are now randomly paired. If you want to randomly pair more names, then feel free to click the back button below. </h1>
+<h1> Here are the names that you chose, which are now randomly paired. If you want to randomly pair more names, then feel free to click the back button on your browser. </h1>
 <form method = "post" action = "restart">
 </form>
-<input class = "button" type = "submit" value = "Back" onclick>
+<%=results%>
+<br><br>
+<!-- <input class = "button" type = "submit" value = "Back" onclick> -->
 </body>
 </div>
